Finalisation animation check plats avec text-overflow: ellipsis, diverses corrections

--- a/public/css/menus.css
+++ b/public/css/menus.css
@@ -1,7 +1,7 @@
 /*PROPRIETES GENERALE*/
-/*Couleurs*/
-/*Police*/
-/*Mise en page*/
+/*COULEURS*/
+/*POLICE*/
+/*MISE EN PAGE*/
 #bloc-page {
   max-width: 100%;
 }
@@ -22,8 +22,10 @@ h4 {
 
 /*HEADER*/
 header {
-  min-width: 100%;
+  position: relative;
+  width: 100%;
   height: 70px;
+  margin: auto;
   align-items: center;
 }
 header .header__retour {
@@ -143,7 +145,7 @@ header .header__logo {
 }
 .menu .menu__plats .description__assiette {
   flex-direction: row;
-  width: 380px;
+  width: 100%;
   max-width: 600px;
   height: 80px;
   background-color: white;
@@ -156,19 +158,21 @@ header .header__logo {
 .menu .menu__plats .description__assiette .description {
   flex-direction: row;
   justify-content: space-between;
+  min-width: 0;
   width: 100%;
 }
 .menu .menu__plats .description__assiette .assiette {
   flex-direction: column;
   row-gap: 10px;
-  min-width: 20%;
-  max-width: 70%;
+  min-width: 0;
+  max-width: 100%;
   height: 50px;
   margin: 15px;
   margin-right: 0;
+  flex-shrink: 1;
 }
 .menu .menu__plats .description__assiette .assiette h4, .menu .menu__plats .description__assiette .assiette p {
-  min-width: 50px;
+  min-width: 0;
   max-width: 100%;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -190,7 +194,7 @@ header .header__logo {
   cursor: pointer;
 }
 .menu .menu__plats .description__assiette:hover .validation {
-  width: 25%;
+  width: 100px;
   align-items: center;
   justify-content: center;
   background-color: #99E2D0;
@@ -220,7 +224,7 @@ header .header__logo {
     opacity: 1;
   }
 }
-/*Animations entrees*/
+/*ANIMATIONS ENTREES*/
 .premiere__entree {
   animation: animation-plats 1s linear 0.2s 1 normal forwards, opacite 0.5s linear 0.2s 1 normal forwards;
 }
@@ -233,7 +237,7 @@ header .header__logo {
   animation: animation-plats 1s linear 0.8s 1 normal forwards, opacite 0.5s linear 0.8s 1 normal forwards;
 }
 
-/*Animations plats*/
+/*ANIMATIONS PLATS*/
 .premier__plat {
   animation: animation-plats 1s linear 1.3s normal forwards, opacite 0.5s linear 1.3s normal forwards;
 }
@@ -246,7 +250,7 @@ header .header__logo {
   animation: animation-plats 1s linear 1.9s normal forwards, opacite 0.5s linear 1.9s normal forwards;
 }
 
-/*Animtions desserts*/
+/*ANIMATIONS DESSERTS*/
 .premier__dessert {
   animation: animation-plats 1s linear 2.4s normal forwards, opacite 0.5s linear 2.4s normal forwards;
 }
@@ -259,7 +263,7 @@ header .header__logo {
   animation: animation-plats 1s linear 3s normal forwards, opacite 0.5s linear 3s normal forwards;
 }
 
-/*ANIMATION CHECK PLATS*/
+/*ANIMATIONS CHECK PLATS*/
 @keyframes rotation-check {
   from {
     transform: rotate(0deg);
