--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,14 @@
 /*PROPRIETES GENERALE*/
 
-/*Couleurs*/
+/*COULEURS*/
 $couleur-primaire: #9356DC;
 $couleur-secondaire: #FF79DA;
 $couleur-tertiaire: #99E2D0;
+$couleur-fond: #EAEAEA;
+$couleur-texte-etiquettes: #258667;
+$couleur-fond-footer: #363535;
 
-/*Police*/
+/*POLICE*/
 @mixin police-titre {
     font-family: 'Shrikhand', sans-serif;
 }
@@ -14,7 +17,7 @@ $couleur-tertiaire: #99E2D0;
     font-family: 'Roboto', sans-serif;
 }
 
-/*Mise en page*/
+/*MISE EN PAGE*/
 
 #bloc-page {
     position: relative;
@@ -46,7 +49,7 @@ h4 {
     background-color: white;
     top: 0;
     bottom: 0;
-    animation: effacement 2.5s ease-in-out 0.5s 1 normal forwards, disparition 0s linear 3s 1 normal forwards;
+    animation: effacement 2.5s ease-in-out 0.5s 1 normal forwards, disparition 0s linear 2.5s 1 normal forwards;
 }
 
 .load__spin {
@@ -143,6 +146,7 @@ h4 {
     transform:rotate(405deg);
   }
 }
+
 /*HEADER*/
 
 header {
@@ -176,12 +180,12 @@ header .fas {
         justify-content: center;
         align-items: center;
         gap: 15px;
-        background-color: #EAEAEA;
+        background-color: $couleur-fond;
         
 
         .recherche__localisation--champ {
             height: 30px;
-            background-color: #EAEAEA;
+            background-color: $couleur-fond;
             border: 0;
             
             &::placeholder {
@@ -203,7 +207,7 @@ header .fas {
         justify-content: center;
         align-items: center;
         row-gap: 25px;
-        background-color: #F7F6F6;
+        background-color: lighten($color: $couleur-fond, $amount: 5%);
 
         .recherche__adresse--titre {
             text-align: center;
@@ -268,7 +272,7 @@ header .fas {
         flex-direction: row;
         align-items: center;
         border-radius: 25px;
-        background-color: #F7F6F6;
+        background-color: lighten($color: $couleur-fond, $amount: 5%);
         box-shadow: 2px 2px 5px lightgrey;
         
         
@@ -368,7 +372,7 @@ header .fas {
         padding: 5px 15px;
         border-radius: 3px;
         @include police-texte;
-        color: #258667;
+        color: $couleur-texte-etiquettes;
         background-color: $couleur-tertiaire;
         position: absolute;
         top: 15px;
@@ -445,17 +449,6 @@ header .fas {
         }
     }
 }
-    
-/*Animation coeurs*/
-
-@keyframes remplissage {
-    0% {
-        transform: scale(0);
-    }
-    100% {
-        transform: scale(1);
-    }
-}
 
 /*FOOTER*/
 
@@ -463,8 +456,8 @@ footer {
     flex-direction: column;
     width: 100%;
     margin-top: 50px;
-    color: whitesmoke;
-    background-color: #363535;
+    color: white;
+    background-color: $couleur-fond-footer;
 
     .footer__titre {
         @include police-titre;
@@ -500,7 +493,7 @@ footer {
     }
 }
 
-/*Mise en page tablette*/
+/*MISE EN PAGE TABLETTE*/
 
 @media (min-width: 768px) and (max-width:991px) {
 
